--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME="Kesantrian"
-APP_ENV=local # local, development, production
+APP_ENV=production # local, development, production
 APP_KEY=base64:iNLPWyYdMhLzLd8zwXBjRPa8UEW8iEannOI5u3PmDhw=
-APP_DEBUG=true # true, false
+APP_DEBUG=false # true, false
 APP_TIMEZONE=Asia/Jakarta
 APP_URL=https://riab-app.test
 
@@ -22,9 +22,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=riab_app
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=ruhulis1_appmaster
+DB_USERNAME=ruhulis1_appuser
+DB_PASSWORD="St{alT6z~19D"
 
 SESSION_DRIVER=database
 SESSION_EXPIRE_ON_CLOSE=true
