--- a/.env
+++ b/.env
@@ -56,8 +56,8 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_BUCKET="kesantrian-dev"
-AWS_URL="https://is3.cloudhost.id/kesantrian-dev"
+AWS_BUCKET="kesantrian"
+AWS_URL="https://is3.cloudhost.id/kesantrian"
 AWS_ACCESS_KEY_ID="ESZ1ZWK4SJ6GXY6E1AED"
 AWS_SECRET_ACCESS_KEY="cYO0SvYDBPpyDVbw2LHc7hVMZY4g0pZDuOlczsTv"
 AWS_DEFAULT_REGION="us-west2"
