--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME="Kesantrian"
-APP_ENV=production # local, development, production
+APP_ENV=development # local, development, production
 APP_KEY=base64:iNLPWyYdMhLzLd8zwXBjRPa8UEW8iEannOI5u3PmDhw=
-APP_DEBUG=false # true, false
+APP_DEBUG=true # true, false
 APP_TIMEZONE=Asia/Jakarta
 APP_URL=https://riab-app.test
 
@@ -22,9 +22,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=ruhulis1_appmaster
-DB_USERNAME=ruhulis1_appuser
-DB_PASSWORD="St{alT6z~19D"
+DB_DATABASE=riab_app
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_EXPIRE_ON_CLOSE=true
@@ -56,8 +56,8 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_BUCKET="kesantrian"
-AWS_URL="https://is3.cloudhost.id/kesantrian"
+AWS_BUCKET="kesantrian-dev"
+AWS_URL="https://is3.cloudhost.id/kesantrian-dev"
 AWS_ACCESS_KEY_ID="ESZ1ZWK4SJ6GXY6E1AED"
 AWS_SECRET_ACCESS_KEY="cYO0SvYDBPpyDVbw2LHc7hVMZY4g0pZDuOlczsTv"
 AWS_DEFAULT_REGION="us-west2"
