--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,13 @@
     ],
     "require": {
         "php": "^8.3",
-        "barryvdh/laravel-dompdf": "^3.0",
+        "barryvdh/laravel-dompdf": "^3.1",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "league/flysystem-aws-s3-v3": "^3.29",
         "maatwebsite/excel": "^3.1",
+        "milon/barcode": "^12.0",
         "yajra/laravel-datatables-oracle": "^11.1"
     },
     "require-dev": {
